@@ -1,3 +1,6 @@
+2008-09-07 Changed full arrows slightly to avoid an xpdf rendering
+           problem reported by Friedrich Hagedorn. - JKS
+
 2008-09-07 Fix conversion of quadratic to cubic Bezier curves in PDF 
            and PS backends. Patch by Jae-Joon Lee. - JKS
 
